add BG Color and Download link for Resume PDF

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       name="description"
       content="This is a project portfolio for Mark Snyder"
     />
-
+    <style>
+      body{
+        background-color: bisque;
+      }
+    </style>
   </head>
   <!-- All DOM data to be rendered / displayed is in the <body> -->
   <body>
@@ -41,6 +45,7 @@
             </div>
             <a href="https://www.linkedin.com/in/mark-snyder-69871ba4/">LinkedIN</a>
             <a href="https://github.com/Snyder4000">GitHub</a>
+            <a href="./documents/MarkSndyerResume.pdf">Resume Download</a>
           </div>
         </section>
         <section class="resume">
